# nucleus_driver

./: .gitignore  README.md
blueos_extension/: DISCLAIMER.md  Dockerfile  README.md  requirements.txt
blueos_extension/src/nucleus_extension/: flask_app.py  rov_link.py
blueos_extension/src/nucleus_extension/static/: register_service
blueos_extension/src/nucleus_extension/templates/: base.html  base_orig.html  controller_parameters.html  home.html  index.html  index_orig.html  pid_parameters.html
fusion_driver/: FusionDriver.py  requirements.txt
logs/230125_092430/: ascii_log.csv  condition_log.csv  get_all.txt  nucleus_log.csv
nucleus_driver/: Dockerfile  LICENSE.txt  NucleusDriver.py  README.md  requirements.txt  setup.cfg
nucleus_driver/docs/: blueos_integration.md
nucleus_driver/examples/: unparsed_binary_file.nucleus
nucleus_driver/logs/: README.md
nucleus_driver/src/nucleus_driver/: __init__.py  _assert.py  _commands.py  _connection.py  _download.py  _flash.py  _logger.py  _messages.py  _parser.py  _progress.py  _syslog.py  _version.py  app.py  commands.py  connection.py  flash.py  logger.py  main.py  messages.py  nucleus_driver.py  parser.py
nucleus_driver/src/nucleus_driver/entrypoints/: flask_app.py
nucleus_driver_legacy/: NucleusDriver.py  README.md
nucleus_driver_legacy/examples/: unparsed_binary_file.nucleus
ros2/: .gitignore  Dockerfile  README.md  requirements.txt
ros2/config/: README.md
ros2/entrypoints/: entrypoint.sh
ros2/examples/: README.md  example.py
ros2/src/interfaces/: CMakeLists.txt  package.xml
ros2/src/interfaces/msg/: AHRS.msg  Ahrs.msg  Altimeter.msg  BottomTrack.msg  CurrentProfile.msg  FieldCalibration.msg  IMU.msg  INS.msg  Mag.msg  Magnetometer.msg  Packet.msg  String.msg  WaterTrack.msg
ros2/src/interfaces/srv/: Command.srv  ConnectCommand.srv  ConnectSerial.srv  ConnectTcp.srv  Connection.srv  ReadPacket.srv  StartFieldCalibration.srv  StartStop.srv
ros2/src/nucleus_driver/: package.xml  setup.cfg  setup.py
ros2/src/nucleus_driver/nucleus_clients/: connect_serial.py  disconnect.py
ros2/src/nucleus_driver/nucleus_driver/: nucleus_node.py
ros2/src/nucleus_driver/nucleus_node/: nucleus_node.py
ros2/src/nucleus_driver/nucleus_subscribers/: ahrs_packets.py  current_profile_packets.py
ros2/src/nucleus_driver/test/: test_setup.json
ros2/src/nucleus_driver_ros/: package.xml  setup.cfg  setup.py
ros2/src/nucleus_driver_ros/nucleus_node/: nucleus_node.py
ros2/src/nucleus_driver_ros/nucleus_subscribers/: bottom_track_packets.py
ros2/src/nucleus_driver_ros/test/: test_nucleus_node.py
ros2/src/nucleus_driver_ros2/: package.xml  setup.cfg  setup.py
ros2/src/nucleus_driver_ros2/nucleus_clients/: command.py  connect_tcp.py  field_calibration.py  start.py  stop.py
ros2/src/nucleus_driver_ros2/nucleus_node/: __init__.py  nucleus_node.py
ros2/src/nucleus_driver_ros2/nucleus_subscribers/: ahrs_packets.py  altimeter_packets.py  bottom_track_packets.py  current_profile_packets.py  field_calibration_packets.py  imu_packets.py  ins_packets.py  magnetometer_packets.py  water_track_packets.py
ros2/src/nucleus_driver_ros2/test/: README.md  conftest.py  test_nucleus_driver_ros2.py  test_setup.json
ros2/src/nucleus_node/: setup.cfg  setup.py
ros2/src/nucleus_node/clients/: __init__.py  command.py  connect_serial.py  connect_tcp.py  disconnect.py  field_calibration.py  read_packet.py  start.py  (+1 more)
ros2/src/py_pubsub/: package.xml  setup.py
ros2/src/py_srvcli/: package.xml  setup.py
ros2/src/python_parameters/: package.xml  setup.cfg  setup.py
ros2/src/tutorial_interfaces/: CMakeLists.txt  package.xml
ros2_ws/: Dockerfile  Dockerfile_old  README.md  requirements.txt
ros2_ws/entrypoints/: entrypoint.sh
ros2_ws/examples/: example.py
ros2_ws/src/interfaces/: CMakeLists.txt
ros2_ws/src/nucleus_node/: package.xml  setup.py
setup/: device_ids.csv  jlink_log_file.txt
(+50 files in other folders)
