[metadata]
name = nucleus_driver
version = 1.5.0
author = Martin Bergene Johansen
author_email = martin.johansen@nortekgroup.com
description = driver for the Nortek Nucleus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nortekgroup/nucleus_driver
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    pyserial>=3.5
    cmd2>=2.4.2
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nucleus_driver = nucleus_driver.app:nucleus_driver_console